# CodexSandbox

./: .gitignore  CMakeLists.txt  CURRENT_TASK.md  Makefile.am  README.md
biker2d/: CMakeLists.txt  Makefile  common.glsl
biker2d/include/: biker2d.h  physics.h  renderer.h
biker2d/shaders/: buffer_A.glsl  image.glsl
biker2d/src/: main.c  physics.c  renderer.c
billiard/: .gitignore  Makefile  README.md
billiard/shaders/: billiard.frag  billiard.vert  billiard_main.frag  billiard_physics.frag
billiard/src/: billiard.c  billiard.h  main.c  opengl_renderer.c  opengl_renderer.h  raster_renderer.c  raster_renderer.h
boats/: .gitignore  README.md  boats_game.c  boats_physics.c  boats_physics.h  boats_simulation.c  fragment_shader.glsl  vertex_shader.glsl
bridgebuilder/: .gitignore  CMakeLists.txt  Makefile  README.md  buffer_A.glsl  build_with_binutils.sh  common.glsl  image.glsl
bridgebuilder/include/: bridge_builder.h  input.h  physics.h  renderer.h  utils.h
bridgebuilder/shaders/: fragment_shader.glsl  vertex_shader.glsl
bridgebuilder/src/: bridge_builder.c  input.c  main.c  physics.c  renderer.c  shader_loader.c
cavefly/: .gitignore  Makefile
cavefly/shaders/: buffer_a.glsl  buffer_b.glsl  common.glsl  image.glsl
cavefly/src/: classic_renderer.c  main.c  modern_renderer.c  physics.c
citygame/: .gitignore
citygame/include/: game.h  physics.h  renderer.h
citygame/src/: game.c  physics.c  renderer.c
citygame2/: extracted_glsl.glsl
citygame2/citygame/: Makefile  README.md
citygame2/citygame/include/: types.h
citygame2/citygame/shaders/: fragment.glsl
citygame2/citygame/src/: main.c
crash/c/: common.h
deltateam/: .gitignore  CMakeLists.txt
deltateam/include/: game_mechanics.h  physics.h
deltateam/shaders/: classic_fragment.glsl  terrain_fragment.glsl
deltateam/src/: game_mechanics.c  main.c  physics.c
fez/: .gitignore  Makefile  buffer_A.glsl  build.sh  common.glsl  image.glsl
fez/include/: game.h
fez/src/: main.c  math_world.c  shader_renderer.c  software_renderer.c
golf3d/: .gitignore  CMakeLists.txt
golf3d/include/: game.h  physics.h  renderer.h
golf3d/shaders/: buf_a.vert  buf_b.frag  final.frag  shared.glsl
golf3d/src/: main.c  physics.c  renderer.c
keen/: QWEN.md  TASKS.md  build.sh  run.sh
keen/c/opl/: nuked_opl3.c
keen/reference/: README.md
keen/stdsrc/: Keen.h  main.cpp
keen/stdsrc/core/: Application.cpp  Application.h  ConfigManager.cpp  ConfigManager.h  FileSystem.cpp  FileSystem.h  MemoryManager.cpp  MemoryManager.h  Timer.cpp  Timer.h  Utils.h
keen/stdsrc/game/: ActionManager.cpp  ActionManager.h  GameManager.cpp  GameManager.h  InteractionManager.cpp  InteractionManager.h  KeenSystem.cpp  KeenSystem.h
keen/stdsrc/graphics/: GraphicsSystem.cpp  GraphicsSystem.h  ResourcePool.cpp  ResourcePool.h  SpriteAnimation.cpp  SpriteAnimation.h  TextureManager.cpp  TextureManager.h
keen/uppsrc/: CURRENT_TASK.md
keen/uppsrc/Keen/: AGENTS.md  Keen.cpp  Keen.h  Keen.upp
keen/upptst/KeenUnit/: KeenAutoDemoConfigTest.cpp  KeenAutoDemoTimeoutTest.cpp  KeenBufferSyncTest.cpp  KeenCacheTest.cpp  KeenDemoAutoTest.cpp  KeenDemoMoveTest.cpp  KeenDemoPauseTest.cpp  KeenDemoRecordTest.cpp  KeenFrameRateTest.cpp  KeenHudTest.cpp  KeenInputTimeTest.cpp  (+10 more)
mania/: CURRENT_TASK.md
minigolf3D/: Makefile  README.md  buffer_A.glsl  buffer_B.glsl  build.sh  common.glsl  image.glsl  minigolf3D_software
minigolf3D/include/: game.h  physics.h  renderer.h
minigolf3D/shaders/: minigolf3D.frag  minigolf3D.vert
minigolf3D/src/: game.c  main.c  physics.c  renderer.c
pinball/: QWEN.md  README.md  build.sh  configure.ac  tasks.md
pinball/include/: ball.h  camera.h  game.h  input.h  paddle.h  renderer.h  shader.h  simple_renderer.h
pinball/shaders/: MdyGDz_pass_0.glsl  MdyGDz_pass_1.glsl  MdyGDz_pass_2.glsl  MdyGDz_pass_3.glsl  MdyGWG_pass_0.glsl  MdyGWG_pass_1.glsl  advanced_pinball.frag  simple_pinball.frag
pinball/src/: ball.cpp  camera.cpp  game.cpp  input.cpp  main.cpp  paddle.cpp  renderer.cpp  shader.cpp  simple_renderer.cpp
quake/: .gitignore  CMakeLists.txt  Makefile
quake/include/: game.h  modern_renderer.h  old_school_renderer.h  physics.h  renderer.h
quake/shaders/: quake.frag
quake/src/: game.c  main.c  modern_renderer.c  old_school_renderer.c  physics.c  renderer.c
rollercoaster/: .gitignore  CMakeLists.txt
rollercoaster/include/: rollercoaster.h
rollercoaster/shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
rollercoaster/src/: game.c  rollercoaster_physics.c
skate/: build.sh  compile.sh
skate/src/: Blender plugin for THPS custom levels_models (io_thps_scene) - Tony Hawk Archive.html
skate/uppsrc/: CURRENT_TASK.md  Makefile
snow/cpp/: multiplayer.cpp  multiplayer.hpp
soccer2d/: .gitignore  Makefile  README.md  buffer_A.glsl  buffer_B.glsl  build.sh  common.glsl  image.glsl
soccer2d/include/: soccer2d.h
soccer2d/shaders/: fragment.glsl  vertex.glsl
soccer2d/src/: main.c  soccer2d_physics.c  soccer2d_physics_update.c  soccer2d_render.c
soldat/: CMakeLists.txt  Makefile  Makefile.am  PROGRESS.md  build.sh  configure.ac  run.sh
soldat/src/: client_main.cpp  main.cpp  server_main.cpp
soldat/stdsrc/: AI.h  Anims.h  AutoUpdater.h  BanSystem.cpp  BanSystem.h  BinPack.h  Bullets.h  CMakeLists.txt  Calc.h  Client.cpp  Client.h  ClientCommands.h  ClientGame.h  ClientMain.cpp  Command.h  Console.h  Constants.h  ControlGame.cpp  ControlGame.h  Cvar.h  Demo.h  FileClient.cpp  FileClient.h  FileServer.h  Game.h  GameMenus.h  GameRendering.h  GameStrings.h  Gfx.h  GostekGraphics.h  Input.h  InterfaceGraphics.h  LobbyClient.h  LogFile.h  Main.h  MapFile.cpp  MapFile.h  MapGraphics.h  Net.h  Parts.h  (+27 more)
spaceglider/: space_glider_glsl.glsl
spaceglider/shaders/: fragment.glsl
spaceglider/src/: game_logic.h  input.c  input.h  renderer_modern.c
spaceglider_c/: .gitignore  Makefile
spaceglider_c/shaders/: vertex.glsl
spaceglider_c/src/: game_logic.c  main.c  physics.c  physics.h  renderer_modern.c  renderer_modern.h  renderer_old.c  renderer_old.h
(+2260 files in other folders)
